# Collision-Simulator

./: .gitignore  CMakeLists.txt  README.md
config/: config.txt
include/: ball_gen.hpp  ball_header.hpp  vector_math.hpp
src/: ball_func.cpp  ball_gen_func.cpp  main.cpp  vector_math.cpp
